--- a/package.json
+++ b/package.json
@@ -5,14 +5,21 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@mui/material": "^6.4.5",
+    "@nrwl/react": "^19.8.4",
+    "axios": "^1.7.9",
     "next": "~15.1.4",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "react-router-dom": "6.11.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "@eslint/compat": "^1.1.1",
     "@eslint/eslintrc": "^2.1.1",
     "@eslint/js": "^9.8.0",
+    "@nrwl/workspace": "^19.8.4",
     "@nx/devkit": "20.4.6",
     "@nx/eslint": "20.4.6",
     "@nx/eslint-plugin": "20.4.6",
@@ -20,16 +27,23 @@
     "@nx/js": "20.4.6",
     "@nx/next": "20.4.6",
     "@nx/playwright": "20.4.6",
+    "@nx/react": "20.4.6",
+    "@nx/vite": "20.4.6",
+    "@nx/web": "20.4.6",
     "@nx/workspace": "20.4.6",
     "@playwright/test": "^1.36.0",
     "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@testing-library/dom": "10.4.0",
     "@testing-library/react": "16.1.0",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/ui": "^1.3.1",
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.7.0",
     "eslint": "^9.8.0",
@@ -42,14 +56,22 @@
     "eslint-plugin-react-hooks": "5.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "~22.1.0",
     "nx": "20.4.6",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
-    "tailwindcss": "3.4.3",
+    "tailwindcss": "^3.4.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
-    "typescript-eslint": "^8.19.0"
+    "typescript-eslint": "^8.19.0",
+    "verdaccio": "^5.0.4",
+    "vite": "^5.0.0",
+    "vite-plugin-dts": "~3.8.1",
+    "vitest": "^1.3.1"
+  },
+  "nx": {
+    "includedScripts": []
   }
 }
