--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,10 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@my-portfolio/api-utils": ["api-utils/src/index.ts"],
+      "@my-portfolio/ui-components": ["ui-components/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
