--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.5",
+    "@mui/styled-engine": "^6.4.3",
     "@nrwl/react": "^19.8.4",
     "axios": "^1.7.9",
     "next": "~15.1.4",
