--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.5",
     "@mui/styled-engine": "^6.4.3",
+    "@nrwl/cli": "^15.9.3",
     "@nrwl/react": "^19.8.4",
     "axios": "^1.7.9",
+    "express": "^4.21.2",
+    "formik": "^2.4.6",
     "next": "~15.1.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-router-dom": "6.11.2"
+    "react-router-dom": "6.11.2",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
@@ -22,25 +26,33 @@
     "@eslint/compat": "^1.1.1",
     "@eslint/eslintrc": "^2.1.1",
     "@eslint/js": "^9.8.0",
+    "@nrwl/express": "^19.8.4",
     "@nrwl/workspace": "^19.8.4",
     "@nx/devkit": "20.4.6",
     "@nx/eslint": "20.4.6",
     "@nx/eslint-plugin": "20.4.6",
+    "@nx/express": "^20.4.6",
     "@nx/jest": "20.4.6",
     "@nx/js": "20.4.6",
     "@nx/next": "20.4.6",
+    "@nx/node": "20.4.6",
     "@nx/playwright": "20.4.6",
     "@nx/react": "20.4.6",
+    "@nx/storybook": "^20.4.6",
     "@nx/vite": "20.4.6",
     "@nx/web": "20.4.6",
+    "@nx/webpack": "20.4.6",
     "@nx/workspace": "20.4.6",
     "@playwright/test": "^1.36.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@testing-library/dom": "10.4.0",
     "@testing-library/react": "16.1.0",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
     "@types/react": "19.0.0",
@@ -63,6 +75,8 @@
     "nx": "20.4.6",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
+    "react-refresh": "^0.10.0",
+    "storybook": "^8.4.6",
     "tailwindcss": "^3.4.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
@@ -72,7 +86,8 @@
     "verdaccio": "^5.0.4",
     "vite": "^5.0.0",
     "vite-plugin-dts": "~3.8.1",
-    "vitest": "^1.3.1"
+    "vitest": "^1.3.1",
+    "webpack-cli": "^5.1.4"
   },
   "nx": {
     "includedScripts": []
